--- a/styles/app/TabsMenu.module.scss
+++ b/styles/app/TabsMenu.module.scss
@@ -13,6 +13,7 @@
     justify-content: space-between;
     // border: 1px solid black;
 
+
     ul {
         display: flex;
         flex-direction: column;
@@ -22,7 +23,6 @@
         // height: 50%;
         overflow: auto;
         margin-top: 1em;
-
 
         li {
             background: var(--lightest-aqua);
@@ -48,6 +48,7 @@
                 width: 100%;
                 min-height: 40px;
                 border-radius: 15px;
+
             }
 
             &.current {
@@ -58,6 +59,7 @@
             .deleteTabWrapper {
                 position: absolute;
                 right: 15px;
+                top: 7px;
                 opacity: 40%;
                 // border: 1px solid black;
             }
